--- a/classProject/css/style.css
+++ b/classProject/css/style.css
@@ -7,3 +7,69 @@
     position: relative;
     z-index: -5;
 }
+
+/* Block Game Base */
+.box {
+    positon: relative;
+    width: 250px;
+    height: 25px;
+    margin: 30% auto ;
+    background: #fff;
+    box-shadow: -10px 5px 30px rgba(0,0,0,.5);
+    transition: .5s;
+    transform: skewY(-20deg);
+  /*   transform: skewX(10deg); */
+    box-sizing: border-box;
+  }
+  .box::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -200px;
+    width: 200px;
+    height: 100%;
+    background: lightgrey;
+    transform-origin: right bottom;
+    transform: skewY(45deg);
+  /*   transform: skewX(-5deg); */
+  }
+  .box::after {
+    content: '';
+    position: absolute;
+    top: -200px;
+    left: 0;
+    width: 100%;
+    height: 200px;
+    background: #efefef;
+    transform-origin: bottom left;
+    transform: skewX(45deg);
+  }
+  .box h3 {
+    position: relative;
+    background: #169fff;
+    color: #fff;
+    text-align: center;
+    margin: 40px 0 0;
+    padding: 8px 0;
+    font-size: 36px;
+    text-transform: uppercase;
+    text-shadow: -2px 2px 10px rgba(0,0,0,.5);
+  }
+  .box h3:before{
+    content:'';
+    position:absolute;
+    top: 0;
+    left: -25px;
+    width: 25px;
+    height:100%;
+    background: #085a93; 
+    transform-origin: top right;
+    transform: skewY(45deg);
+    transform: skewX(-45deg);
+  }
+  .box p {
+    padding: 0 20px;
+    color: #262222;
+    text-align: center;
+    font-size: 18px;
+  }
