--- a/lectures/week4/Day1/css/style.css
+++ b/lectures/week4/Day1/css/style.css
@@ -59,3 +59,13 @@ main {
     justify-content: center;
     align-items: center;
 }
+.hiddenDanger {
+    display: none;
+}
+.cookie {
+    border: white 3px double;
+    margin: -3em 1em 1em 1em;
+    padding: 2em;
+    z-index: 10;
+    background-color: green;
+}
