--- a/lectures/week7/Day02/css/style.css
+++ b/lectures/week7/Day02/css/style.css
@@ -1,41 +1,29 @@
-.flexcolumn {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.flexrow {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-img {
-  max-width: 200px;
-}
 body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: purple;
+  width: 95%;
 }
-body h1 {
-  color: white;
-}
-body h2 {
-  color: red;
-}
-body .fun3 {
+body header {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  width: 95%;
+  justify-content: space-around;
 }
-body .fun3 .three {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 1em;
+body header #hideMe {
+  display: none;
+}
+body main #imgReturn {
+  display: none;
+}
+body main #img {
+  display: inline;
+}
+body main .div {
+  background-color: #98bf21;
+  height: 100px;
+  width: 100px;
 }
